[gd_scene load_steps=10 format=3 uid="uid://cn4h5oig1a38i"]

[ext_resource type="Texture2D" uid="uid://df7kvasy517pd" path="res://Assets/Enemies/BOSS.png" id="1_4lkuj"]
[ext_resource type="Script" path="res://Scripts/boss.gd" id="1_awe1h"]
[ext_resource type="PackedScene" uid="uid://b8afsm0le5rqy" path="res://Scenes/boss_pew.tscn" id="2_we6eq"]
[ext_resource type="AudioStream" uid="uid://278v6k3pxi0n" path="res://Assets/Sounds/RPG_Essentials_Free/8_Atk_Magic_SFX/45_Charge_05.wav" id="4_4l2wk"]

[sub_resource type="Animation" id="Animation_p5lkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d2lcq"]
resource_name = "boss_attack"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_4vpc3"]
resource_name = "boss_idle"
length = 0.750013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sndkh"]
_data = {
"RESET": SubResource("Animation_p5lkg"),
"boss_attack": SubResource("Animation_d2lcq"),
"boss_idle": SubResource("Animation_4vpc3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4pxnl"]
radius = 17.0294

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("timer", "healthUp")]
scale = Vector2(3.76, 3.76)
script = ExtResource("1_awe1h")
pew = ExtResource("2_we6eq")
timer = NodePath("pewpew")
healthUp = NodePath("health")

[node name="Boss" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
texture = ExtResource("1_4lkuj")
hframes = 8
vframes = 4

[node name="BossAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_sndkh")
}
autoplay = "boss_idle"

[node name="BossBody" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 2)
scale = Vector2(1.08, 1.08)
shape = SubResource("CircleShape2D_4pxnl")

[node name="pewpew" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="health" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="pewpewpew" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4l2wk")
bus = &"SFX"

[connection signal="timeout" from="pewpew" to="." method="_on_pewpew_timeout"]
[connection signal="timeout" from="health" to="." method="_on_health_timeout"]
